# PyTorchCoilSim

./: .gitignore  README.md  pyproject.toml  setup.py
coilsim/: Coil.py  ROI.py  __init__.py  kicad_coil_writer.py
coilsim.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/Rectangular Gradient/: rect_grad_opt.ipynb
examples/Rectangular Gradient/Rect_Grads_PCB/: Rect_Grads_PCB.kicad_pcb  Rect_Grads_PCB.kicad_prl  Rect_Grads_PCB.kicad_pro  Rect_Grads_PCB.kicad_sch  Rect_Grads_PCB.step  Rect_Grads_PCB.yaml
examples/Wellplate SurfaceCoil/: coil_optimization.py
